WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221573
[LFC][Integration] Style change on an inline box should trigger invalidation
https://bugs.webkit.org/show_bug.cgi?id=221573
Summary
[LFC][Integration] Style change on an inline box should trigger invalidation
zalan
Reported
2021-02-08 14:12:34 PST
full invalidation at this point.
Attachments
Patch
(1.81 KB, patch)
2021-02-08 14:17 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(2.01 KB, patch)
2021-02-09 11:21 PST
,
zalan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2021-02-08 14:17:03 PST
Created
attachment 419626
[details]
Patch
Antti Koivisto
Comment 2
2021-02-08 22:12:21 PST
Comment on
attachment 419626
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=419626&action=review
> Source/WebCore/rendering/RenderInline.cpp:200 > + if (needsLayout()) {
Probably selfNeedsLayout() We may also need descendant canUse test similar to canUseForAfterStyleChange.
> Source/WebCore/rendering/RenderInline.cpp:202 > + downcast<RenderBlockFlow>(*containingBlock()).invalidateLineLayoutPath();
There is LineLayout::blockContainer I have been using for this sort of things.
zalan
Comment 3
2021-02-09 11:21:45 PST
Created
attachment 419745
[details]
Patch
EWS
Comment 4
2021-02-09 12:24:43 PST
Committed
r272601
: <
https://commits.webkit.org/r272601
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419745
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-02-10 14:32:54 PST
<
rdar://problem/74206609
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug