[LFC][Integration] Style change on an inline box should trigger invalidation https://bugs.webkit.org/show_bug.cgi?id=221573

Reviewed by Antti Koivisto.

Invalidate the line layout path when the inline box (RenderInline) needs layout.
e.g. the font-family property change in imported/w3c/web-platform-tests/css/css-fonts/generic-family-keywords-001.html
(This is sadly a full invalidation at this point.)

* rendering/RenderInline.cpp:
(WebCore::RenderInline::styleDidChange):


Canonical link: https://commits.webkit.org/233864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272601 268f45cc-cd09-0410-ab3c-d52691b4dbfc