Source/WebCore/rendering/RenderInline.cpp
@@ -197,8 +197,14 @@ void RenderInline::styleDidChange(StyleDifference diff, const RenderStyle* oldSt
 
 #if ENABLE(LAYOUT_FORMATTING_CONTEXT)
     if (diff >= StyleDifference::Repaint) {
-        if (auto* lineLayout = LayoutIntegration::LineLayout::containing(*this))
-            lineLayout->updateStyle(*this);
+        if (auto* lineLayout = LayoutIntegration::LineLayout::containing(*this)) {
+            if (selfNeedsLayout()) {
+                // FIXME: Add support for partial invalidation.
+                if (auto* container = LayoutIntegration::LineLayout::blockContainer(*this))
+                    container->invalidateLineLayoutPath();
+            } else
+                lineLayout->updateStyle(*this);
+        }
     }
 #endif
 }
